[gd_scene load_steps=10 format=4 uid="uid://vbn7nguvekub"]

[ext_resource type="Script" path="res://scripts/hallway.gd" id="1_1k2v8"]
[ext_resource type="PackedScene" uid="uid://cekseoerj8xp0" path="res://scenes/gui_trigger.tscn" id="3_3w3tr"]
[ext_resource type="PackedScene" uid="uid://c1062pb2qdbpp" path="res://scenes/fact_gui.tscn" id="4_1k2v8"]
[ext_resource type="PackedScene" uid="uid://yptfi1biv5iq" path="res://scenes/scene_transition_animation.tscn" id="6_nlnob"]
[ext_resource type="PackedScene" uid="uid://c13025l3bph2n" path="res://scenes/player.tscn" id="6_txc3n"]
[ext_resource type="TileSet" uid="uid://bj41bdadvtdpk" path="res://art/tilesets/scriptkiddie.tres" id="6_yjeik"]
[ext_resource type="FontFile" uid="uid://cic6qm2rhbpuf" path="res://art/fonts/tinypixel.otf" id="7_yjeik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txc3n"]
size = Vector2(13.016846, 9.215088)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k2v8"]
size = Vector2(48, 28)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_1k2v8")

[node name="Subfloor" type="TileMapLayer" parent="."]
position = Vector2(-19, -22)
tile_map_data = PackedByteArray("AAAZABoAAQANAAMAAAATAAQAAQALAAIAAAAkABoAAwAFAMkBAGAkABsAAwAEAMkBAGAmABsAAwAGAMkBAFAmABoAAwAFAMkBAFAlABgAAwABAM4BAAAmABgAAwACAM8BAAAkABkAAwAFAMkBAGAmABkAAwAFAMkBAFA=")
tile_set = ExtResource("6_yjeik")

[node name="Floor" type="TileMapLayer" parent="."]
position = Vector2(-19, -24)
tile_map_data = PackedByteArray("AAAUABwABgANAAUAAAAUAB0ABgANAAUAAAAUAB4ABgANAAUAAAAUAB8ABgANAAUAAAAUACAABgANAAUAAAAUACEABgANAAUAAAAUACIABgANAAUAAAAUACMABgANAAUAAAAUACQABgANAAUAAAAUACUABgANAAUAAAAUACYABgANAAUAAAAUACcABgANAAUAAAAUACgABgANAAUAAAAVABwABgANAAUAAAAVAB0ABgANAAUAAAAVAB4ABgANAAUAAAAVAB8ABgANAAUAAAAVACAABgANAAUAAAAVACEABgANAAUAAAAVACIABgANAAUAAAAVACMABgANAAUAAAAVACQABgANAAUAAAAVACUABgANAAUAAAAVACYABgANAAUAAAAVACcABgANAAUAAAAVACgABgANAAUAAAAWABwABgANAAUAAAAWAB0ABgANAAUAAAAWAB4ABgANAAUAAAAWAB8ABgANAAUAAAAWACAABgANAAUAAAAWACEABgANAAUAAAAWACIABgANAAUAAAAWACMABgANAAUAAAAWACQABgANAAUAAAAWACUABgANAAUAAAAWACYABgANAAUAAAAWACcABgANAAUAAAAWACgABgANAAUAAAAXABwABgANAAUAAAAXAB0ABgANAAUAAAAXAB4ABgANAAUAAAAXAB8ABgANAAUAAAAXACAABgANAAUAAAAXACEABgANAAUAAAAXACIABgANAAUAAAAXACMABgANAAUAAAAXACQABgANAAUAAAAXACUABgANAAUAAAAXACYABgANAAUAAAAXACcABgANAAUAAAAXACgABgANAAUAAAAYABwABgANAAUAAAAYAB0ABgANAAUAAAAYAB4ABgANAAUAAAAYAB8ABgANAAUAAAAYACAABgANAAUAAAAYACEABgANAAUAAAAYACIABgANAAUAAAAYACMABgANAAUAAAAYACQABgANAAUAAAAYACUABgANAAUAAAAYACYABgANAAUAAAAYACcABgANAAUAAAAYACgABgANAAUAAAAZABwABgANAAUAAAAZAB0ABgANAAUAAAAZAB4ABgANAAUAAAAZAB8ABgANAAUAAAAZACAABgANAAUAAAAZACEABgANAAUAAAAZACIABgANAAUAAAAZACMABgANAAUAAAAZACQABgANAAUAAAAZACUABgANAAUAAAAZACYABgANAAUAAAAZACcABgANAAUAAAAZACgABgANAAUAAAAaABwABgANAAUAAAAaAB0ABgANAAUAAAAaAB4ABgANAAUAAAAaAB8ABgANAAUAAAAaACAABgANAAUAAAAaACEABgANAAUAAAAaACIABgANAAUAAAAaACMABgANAAUAAAAaACQABgANAAUAAAAaACUABgANAAUAAAAaACYABgANAAUAAAAaACcABgANAAUAAAAbABwABgANAAUAAAAbAB0ABgANAAUAAAAbAB4ABgANAAUAAAAbAB8ABgANAAUAAAAbACAABgANAAUAAAAbACEABgANAAUAAAAbACIABgANAAUAAAAbACMABgANAAUAAAAbACQABgANAAUAAAAbACUABgANAAUAAAAbACYABgANAAUAAAAbACcABgANAAUAAAAbACgABgANAAUAAAAcABwABgANAAUAAAAcAB0ABgANAAUAAAAcAB4ABgANAAUAAAAcAB8ABgANAAUAAAAcACAABgANAAUAAAAcACEABgANAAUAAAAcACIABgANAAUAAAAcACMABgANAAUAAAAcACQABgANAAUAAAAcACUABgANAAUAAAAcACYABgANAAUAAAAcACcABgANAAUAAAAcACgABgANAAUAAAAdABwABgANAAUAAAAdAB0ABgANAAUAAAAdAB4ABgANAAUAAAAdAB8ABgANAAUAAAAdACAABgANAAUAAAAdACEABgANAAUAAAAdACIABgANAAUAAAAdACMABgANAAUAAAAdACQABgANAAUAAAAdACUABgANAAUAAAAdACYABgANAAUAAAAdACcABgANAAUAAAAdACgABgANAAUAAAAeABwABgANAAUAAAAeAB0ABgANAAUAAAAeAB4ABgANAAUAAAAeAB8ABgANAAUAAAAeACAABgANAAUAAAAeACEABgANAAUAAAAeACIABgANAAUAAAAeACMABgANAAUAAAAeACQABgANAAUAAAAeACUABgANAAUAAAAeACYABgANAAUAAAAeACcABgANAAUAAAAeACgABgANAAUAAAAfABwABgANAAUAAAAfAB0ABgANAAUAAAAfAB4ABgANAAUAAAAfAB8ABgANAAUAAAAfACAABgANAAUAAAAfACEABgANAAUAAAAfACIABgANAAUAAAAfACMABgANAAUAAAAfACQABgANAAUAAAAfACUABgANAAUAAAAfACYABgANAAUAAAAfACcABgANAAUAAAAfACgABgANAAUAAAAgABwABgANAAUAAAAgAB0ABgANAAUAAAAgAB4ABgANAAUAAAAgAB8ABgANAAUAAAAgACAABgANAAUAAAAgACEABgANAAUAAAAgACIABgANAAUAAAAgACMABgANAAUAAAAgACQABgANAAUAAAAgACUABgANAAUAAAAgACYABgANAAUAAAAgACcABgANAAUAAAAgACgABgANAAUAAAAhABwABgANAAUAAAAhAB0ABgANAAUAAAAhAB4ABgANAAUAAAAhAB8ABgANAAUAAAAhACAABgANAAUAAAAhACEABgANAAUAAAAhACIABgANAAUAAAAhACMABgANAAUAAAAhACQABgANAAUAAAAhACUABgANAAUAAAAhACYABgANAAUAAAAhACcABgANAAUAAAAhACgABgANAAUAAAAiABwABgANAAUAAAAiAB0ABgANAAUAAAAiAB4ABgANAAUAAAAiAB8ABgANAAUAAAAiACAABgANAAUAAAAiACEABgANAAUAAAAiACIABgANAAUAAAAiACMABgANAAUAAAAiACQABgANAAUAAAAiACUABgANAAUAAAAiACYABgANAAUAAAAiACcABgANAAUAAAAiACgABgANAAUAAAAjABwABgANAAUAAAAjAB0ABgANAAUAAAAjAB4ABgANAAUAAAAjAB8ABgANAAUAAAAjACAABgANAAUAAAAjACEABgANAAUAAAAjACIABgANAAUAAAAjACMABgANAAUAAAAjACQABgANAAUAAAAjACUABgANAAUAAAAjACYABgANAAUAAAAjACcABgANAAUAAAAjACgABgANAAUAAAAkABwABgANAAUAAAAkAB0ABgANAAUAAAAkAB4ABgANAAUAAAAkAB8ABgANAAUAAAAkACAABgANAAUAAAAkACEABgANAAUAAAAkACIABgANAAUAAAAkACMABgANAAUAAAAkACQABgANAAUAAAAkACUABgANAAUAAAAkACYABgANAAUAAAAkACcABgANAAUAAAAkACgABgANAAUAAAAlABwABgANAAUAAAAlAB0ABgANAAUAAAAlAB4ABgANAAUAAAAlAB8ABgANAAUAAAAlACAABgANAAUAAAAlACEABgANAAUAAAAlACIABgANAAUAAAAlACMABgANAAUAAAAlACQABgANAAUAAAAlACUABgANAAUAAAAlACYABgANAAUAAAAlACcABgANAAUAAAAlACgABgANAAUAAAAmABwABgANAAUAAAAmAB0ABgANAAUAAAAmAB4ABgANAAUAAAAmAB8ABgANAAUAAAAmACAABgANAAUAAAAmACEABgANAAUAAAAmACIABgANAAUAAAAmACMABgANAAUAAAAmACQABgANAAUAAAAmACUABgANAAUAAAAmACYABgANAAUAAAAmACcABgANAAUAAAAmACgABgANAAUAAAAnABwABgANAAUAAAAnAB0ABgANAAUAAAAnAB4ABgANAAUAAAAnAB8ABgANAAUAAAAnACAABgANAAUAAAAnACEABgANAAUAAAAnACIABgANAAUAAAAnACMABgANAAUAAAAnACQABgANAAUAAAAnACUABgANAAUAAAAnACYABgANAAUAAAAnACcABgANAAUAAAAnACgABgANAAUAAAAoABwABgANAAUAAAAoAB0ABgANAAUAAAAoAB4ABgANAAUAAAAoAB8ABgANAAUAAAAoACAABgANAAUAAAAoACEABgANAAUAAAAoACIABgANAAUAAAAoACMABgANAAUAAAAoACQABgANAAUAAAAoACUABgANAAUAAAAoACYABgANAAUAAAAoACcABgANAAUAAAAoACgABgANAAUAAAApABwABgANAAUAAAApAB0ABgANAAUAAAApAB4ABgANAAUAAAApAB8ABgANAAUAAAApACAABgANAAUAAAApACEABgANAAUAAAApACIABgANAAUAAAApACMABgANAAUAAAApACQABgANAAUAAAApACUABgANAAUAAAApACYABgANAAUAAAApACcABgANAAUAAAApACgABgANAAUAAAAqABwABgANAAUAAAAqAB0ABgANAAUAAAAqAB4ABgANAAUAAAAqAB8ABgANAAUAAAAqACAABgANAAUAAAAqACEABgANAAUAAAAqACIABgANAAUAAAAqACMABgANAAUAAAAqACQABgANAAUAAAAqACUABgANAAUAAAAqACYABgANAAUAAAAqACcABgANAAUAAAAqACgABgANAAUAAAArABwABgANAAUAAAArAB0ABgANAAUAAAArAB4ABgANAAUAAAArAB8ABgANAAUAAAArACAABgANAAUAAAArACEABgANAAUAAAArACIABgANAAUAAAArACMABgANAAUAAAArACQABgANAAUAAAArACUABgANAAUAAAArACYABgANAAUAAAArACcABgANAAUAAAArACgABgANAAUAAAAUAAQABgANAAUAAAAUAAUABgANAAUAAAAUAAYABgANAAUAAAAUAAcABgANAAUAAAAUAAgABgANAAUAAAAUAAkABgANAAUAAAAUAAoABgANAAUAAAAUAAsABgANAAUAAAAUAAwABgANAAUAAAAUAA0ABgANAAUAAAAUAA4ABgANAAUAAAAUAA8ABgANAAUAAAAUABAABgANAAUAAAAUABEABgANAAUAAAAUABIABgANAAUAAAAUABMABgANAAUAAAAUABQABgANAAUAAAAUABUABgANAAUAAAAUABYABgANAAUAAAAUABcABgANAAUAAAAUABgABgANAAUAAAAUABkABgANAAUAAAAUABoABgANAAUAAAAUABsABgANAAUAAAAVAAQABgANAAUAAAAVAAUABgANAAUAAAAVAAYABgANAAUAAAAVAAcABgANAAUAAAAVAAgABgANAAUAAAAVAAkABgANAAUAAAAVAAoABgANAAUAAAAVAAsABgANAAUAAAAVAAwABgANAAUAAAAVAA0ABgANAAUAAAAVAA4ABgANAAUAAAAVAA8ABgANAAUAAAAVABAABgANAAUAAAAVABEABgANAAUAAAAVABIABgANAAUAAAAVABMABgANAAUAAAAVABQABgANAAUAAAAVABUABgANAAUAAAAVABYABgANAAUAAAAVABcABgANAAUAAAAVABgABgANAAUAAAAVABkABgANAAUAAAAVABoABgANAAUAAAAVABsABgANAAUAAAAWAAQABgANAAUAAAAWAAUABgANAAUAAAAWAAYABgANAAUAAAAWAAcABgANAAUAAAAWAAgABgANAAUAAAAWAAkABgANAAUAAAAWAAoABgANAAUAAAAWAAsABgANAAUAAAAWAAwABgANAAUAAAAWAA0ABgANAAUAAAAWAA4ABgANAAUAAAAWAA8ABgANAAUAAAAWABAABgANAAUAAAAWABEABgANAAUAAAAWABIABgANAAUAAAAWABMABgANAAUAAAAWABQABgANAAUAAAAWABUABgANAAUAAAAWABYABgANAAUAAAAWABcABgANAAUAAAAWABgABgANAAUAAAAWABkABgANAAUAAAAWABoABgANAAUAAAAWABsABgANAAUAAAAXAAQABgANAAUAAAAXAAUABgANAAUAAAAXAAYABgANAAUAAAAXAAcABgANAAUAAAAXAAgABgANAAUAAAAXAAkABgANAAUAAAAXAAoABgANAAUAAAAXAAsABgANAAUAAAAXAAwABgANAAUAAAAXAA0ABgANAAUAAAAXAA4ABgANAAUAAAAXAA8ABgANAAUAAAAXABAABgANAAUAAAAXABEABgANAAUAAAAXABIABgANAAUAAAAXABMABgANAAUAAAAXABQABgANAAUAAAAXABUABgANAAUAAAAXABYABgANAAUAAAAXABcABgANAAUAAAAXABgABgANAAUAAAAXABkABgANAAUAAAAXABoABgANAAUAAAAXABsABgANAAUAAAAYAAQABgANAAUAAAAYAAUABgANAAUAAAAYAAYABgANAAUAAAAYAAcABgANAAUAAAAYAAgABgANAAUAAAAYAAkABgANAAUAAAAYAAoABgANAAUAAAAYAAsABgANAAUAAAAYAAwABgANAAUAAAAYAA0ABgANAAUAAAAYAA4ABgANAAUAAAAYAA8ABgANAAUAAAAYABAABgANAAUAAAAYABEABgANAAUAAAAYABIABgANAAUAAAAYABMABgANAAUAAAAYABQABgANAAUAAAAYABUABgANAAUAAAAYABYABgANAAUAAAAYABcABgANAAUAAAAYABgABgANAAUAAAAYABkABgANAAUAAAAYABoABgANAAUAAAAYABsABgANAAUAAAAnAAQABgANAAUAAAAnAAUABgANAAUAAAAnAAYABgANAAUAAAAnAAcABgANAAUAAAAnAAgABgANAAUAAAAnAAkABgANAAUAAAAnAAoABgANAAUAAAAnAAsABgANAAUAAAAnAAwABgANAAUAAAAnAA0ABgANAAUAAAAnAA4ABgANAAUAAAAnAA8ABgANAAUAAAAnABAABgANAAUAAAAnABEABgANAAUAAAAnABIABgANAAUAAAAnABMABgANAAUAAAAnABQABgANAAUAAAAnABUABgANAAUAAAAnABYABgANAAUAAAAnABcABgANAAUAAAAnABgABgANAAUAAAAnABkABgANAAUAAAAnABoABgANAAUAAAAnABsABgANAAUAAAAoAAQABgANAAUAAAAoAAUABgANAAUAAAAoAAYABgANAAUAAAAoAAcABgANAAUAAAAoAAgABgANAAUAAAAoAAkABgANAAUAAAAoAAoABgANAAUAAAAoAAsABgANAAUAAAAoAAwABgANAAUAAAAoAA0ABgANAAUAAAAoAA4ABgANAAUAAAAoAA8ABgANAAUAAAAoABAABgANAAUAAAAoABEABgANAAUAAAAoABIABgANAAUAAAAoABMABgANAAUAAAAoABQABgANAAUAAAAoABUABgANAAUAAAAoABYABgANAAUAAAAoABcABgANAAUAAAAoABgABgANAAUAAAAoABkABgANAAUAAAAoABoABgANAAUAAAAoABsABgANAAUAAAApAAQABgANAAUAAAApAAUABgANAAUAAAApAAYABgANAAUAAAApAAcABgANAAUAAAApAAgABgANAAUAAAApAAkABgANAAUAAAApAAoABgANAAUAAAApAAsABgANAAUAAAApAAwABgANAAUAAAApAA0ABgANAAUAAAApAA4ABgANAAUAAAApAA8ABgANAAUAAAApABAABgANAAUAAAApABEABgANAAUAAAApABIABgANAAUAAAApABMABgANAAUAAAApABQABgANAAUAAAApABUABgANAAUAAAApABYABgANAAUAAAApABcABgANAAUAAAApABgABgANAAUAAAApABkABgANAAUAAAApABoABgANAAUAAAApABsABgANAAUAAAAqAAQABgANAAUAAAAqAAUABgANAAUAAAAqAAYABgANAAUAAAAqAAcABgANAAUAAAAqAAgABgANAAUAAAAqAAkABgANAAUAAAAqAAoABgANAAUAAAAqAAsABgANAAUAAAAqAAwABgANAAUAAAAqAA0ABgANAAUAAAAqAA4ABgANAAUAAAAqAA8ABgANAAUAAAAqABAABgANAAUAAAAqABEABgANAAUAAAAqABIABgANAAUAAAAqABMABgANAAUAAAAqABQABgANAAUAAAAqABUABgANAAUAAAAqABYABgANAAUAAAAqABcABgANAAUAAAAqABgABgANAAUAAAAqABkABgANAAUAAAAqABoABgANAAUAAAAqABsABgANAAUAAAArAAQABgANAAUAAAArAAUABgANAAUAAAArAAYABgANAAUAAAArAAcABgANAAUAAAArAAgABgANAAUAAAArAAkABgANAAUAAAArAAoABgANAAUAAAArAAsABgANAAUAAAArAAwABgANAAUAAAArAA0ABgANAAUAAAArAA4ABgANAAUAAAArAA8ABgANAAUAAAArABAABgANAAUAAAArABEABgANAAUAAAArABIABgANAAUAAAArABMABgANAAUAAAArABQABgANAAUAAAArABUABgANAAUAAAArABYABgANAAUAAAArABcABgANAAUAAAArABgABgANAAUAAAArABkABgANAAUAAAArABoABgANAAUAAAArABsABgANAAUAAAAkABkAAwAAAM8BAAAkABoAAwAAANABAAAkABsAAwAAANEBAAAlABkAAwABAM8BAAAlABoAAwABANABAAAlABsAAwABANEBAAAmABoAAwACANABAAAmABsAAwACANEBAAAbABoAAQABABEAAAAcABoAAQABABEAAAAdABoAAQABABEAAAAeABoAAQABABEAAAAfABoAAQABABEAAAAgABoAAQABABEAAAAhABoAAQABABEAAAAiABoAAQABABEAAAAjABoAAQABABEAAAAaABoAAQABABEAAAAZABgAAQANAAIAAAAZABcAAQANAAIAAAAZABYAAQANAAIAAAAZABUAAQANAAIAAAAZABQAAQANAAIAAAAZABMAAQANAAIAAAAZABIAAQANAAIAAAAZABEAAQANAAIAAAAZABAAAQANAAIAAAAZAA8AAQANAAIAAAAZAA4AAQANAAIAAAAZAA0AAQANAAIAAAAZAAwAAQANAAIAAAAZAAsAAQANAAIAAAAZAAoAAQANAAIAAAAZAAkAAQANAAIAAAAZAAgAAQANAAIAAAAZAAcAAQANAAIAAAAZAAYAAQANAAIAAAAZAAUAAQANAAIAAAAZAAQAAQANAAIAAAAaABsAAQABABIAAAAbABsAAQABABIAAAAcABsAAQABABIAAAAdABsAAQABABIAAAAeABsAAQABABIAAAAfABsAAQABABIAAAAgABsAAQABABIAAAAhABsAAQABABIAAAAiABsAAQABABIAAAAjABsAAQABABIAAAAZABsAAQAHABIAAAAZABkAAQANAAIAAAAZABoAAQAAABEAAAATAAQAAQALAAIAAAATAAUAAgAHAAIAAAATAAYAAgAHAAIAAAATAAcAAgAHAAIAAAATAAgAAgAHAAIAAAATAAkAAgAHAAIAAAATAAoAAgAHAAIAAAATAAsAAgAHAAIAAAATAAwAAgAHAAIAAAATAA0AAgAHAAIAAAATAA4AAgAHAAIAAAATAA8AAgAHAAIAAAATABAAAgAHAAIAAAATABEAAgAHAAIAAAATABIAAgAHAAIAAAATABMAAgAHAAIAAAATABQAAgAHAAIAAAATABUAAgAHAAIAAAATABYAAgAHAAIAAAATABcAAgAHAAIAAAATABgAAgAHAAIAAAATABkAAgAHAAIAAAATABoAAgAHAAIAAAATABsAAgAHAAIAAAATABwAAgAHAAIAAAATAB0AAgAHAAIAAAATAB4AAgAHAAIAAAATAB8AAgAHAAIAAAATACAAAgAHAAIAAAATACEAAgAHAAIAAAATACIAAgAHAAIAAAATACMAAgAHAAIAAAATACQAAgAHAAIAAAATACUAAgAHAAIAAAATACYAAgAHAAIAAAATACcAAgAHAAIAAAATACgAAgAHAAIAAAATACkAAgAHAAMAAAAUACkAAgAIAAMAAAAVACkAAgAIAAMAAAAWACkAAgAIAAMAAAAXACkAAgAIAAMAAAAYACkAAgAIAAMAAAAZACkAAgAIAAMAAAAaACkAAgAIAAMAAAAdACkAAgAIAAMAAAAeACkAAgAIAAMAAAAfACkAAgAIAAMAAAAgACkAAgAIAAMAAAAhACkAAgAIAAMAAAAiACkAAgAIAAMAAAAjACkAAgAIAAMAAAAkACkAAgAIAAMAAAAlACkAAgAIAAMAAAAmACkAAgAIAAMAAAAnACkAAgAIAAMAAAAoACkAAgAIAAMAAAApACkAAgAIAAMAAAAqACkAAgAIAAMAAAArACkAAgAIAAMAAAAsACkAAgAJAAMAAAAsAAQAAgAJAAIAAAAsAAUAAgAJAAIAAAAsAAYAAgAJAAIAAAAsAAcAAgAJAAIAAAAsAAgAAgAJAAIAAAAsAAkAAgAJAAIAAAAsAAoAAgAJAAIAAAAsAAsAAgAJAAIAAAAsAAwAAgAJAAIAAAAsAA0AAgAJAAIAAAAsAA4AAgAJAAIAAAAsAA8AAgAJAAIAAAAsABAAAgAJAAIAAAAsABEAAgAJAAIAAAAsABIAAgAJAAIAAAAsABMAAgAJAAIAAAAsABQAAgAJAAIAAAAsABUAAgAJAAIAAAAsABYAAgAJAAIAAAAsABcAAgAJAAIAAAAsABgAAgAJAAIAAAAsABkAAgAJAAIAAAAsABoAAgAJAAIAAAAsABsAAgAJAAIAAAAsABwAAgAJAAIAAAAsAB0AAgAJAAIAAAAsAB4AAgAJAAIAAAAsAB8AAgAJAAIAAAAsACAAAgAJAAIAAAAsACEAAgAJAAIAAAAsACIAAgAJAAIAAAAsACMAAgAJAAIAAAAsACQAAgAJAAIAAAAsACUAAgAJAAIAAAAsACYAAgAJAAIAAAAsACcAAgAJAAIAAAAsACgAAgAJAAIAAAAnAAIAAgAAAAkAAAAnAAMAAgAAAAoAAAAoAAIAAgABAAkAAAAoAAMAAgABAAoAAAApAAIAAgABAAkAAAApAAMAAgABAAoAAAAqAAIAAgABAAkAAAAqAAMAAgABAAoAAAArAAIAAgACAAkAAAArAAMAAgACAAoAAAAmAAIAAgAHAAEAAAAmAAMAAgAHAAIAAAAsAAMAAgAJAAIAAAAsAAIAAgAJAAEAAAATAAIAAgAHAAEAAAATAAMAAgAHAAIAAAAUAAIAAgAAAAkAAAAUAAMAAgAAAAoAAAAVAAIAAgABAAkAAAAVAAMAAgABAAoAAAAWAAIAAgABAAkAAAAWAAMAAgABAAoAAAAXAAIAAgABAAkAAAAXAAMAAgABAAoAAAAYAAIAAgACAAkAAAAYAAMAAgACAAoAAAAZAAIAAgAJAAEAAAAZAAMAAgAJAAIAAAAmAAQAAQALAAIAAAAmAAUAAQALAAIAAAAmAAYAAQALAAIAAAAmAAcAAQALAAIAAAAmAAgAAQALAAIAAAAmAAkAAQALAAIAAAAmAAoAAQALAAIAAAAmAAsAAQALAAIAAAAmAAwAAQALAAIAAAAmAA0AAQALAAIAAAAmAA4AAQALAAIAAAAmAA8AAQALAAIAAAAmABAAAQALAAIAAAAmABEAAQALAAIAAAAmABIAAQALAAIAAAAmABMAAQALAAIAAAAmABQAAQALAAIAAAAmABUAAQALAAIAAAAmABYAAQALAAIAAAAmABcAAQALAAIAAAAmABgAAwACAM4BAAAmABkAAwACAM8BAAAkABgAAwAAAM4BAAAaACgABgANAAUAAAAbACkAAgAIAAMAAAAcACkAAgAIAAMAAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor" type="TileMapLayer" parent="."]
position = Vector2(-19, -24)
tile_map_data = PackedByteArray("AAAkABgAAwAGAMkBAGAmABgAAwAEAMkBAFAlABgAAwAGAMoBAGAiABoAAwAOAP0BAAAiABsAAwAOAP4BAAAnABgAAwANAGICAAAoABgAAwAOAGICAAApABgAAwAOAGICAAAqABgAAwAOAGICAAAbACIAAwAGAAgBAAAdABoAAwANAFsCAAAdABsAAwANAFwCAAAdABwAAwANAF0CAAAcABoAAwAMAFsCAAAcABsAAwAMAFwCAAAcABwAAwAMAF0CAAAjABoAAwACAFECAAAjABsAAwACAFICAAAeABoAAwACAFoCAAAeABsAAwACAFsCAAAeABwAAwACAFwCAAAoACAAAwAEAJ0AAAApACAAAwAFAJ0AAAAlACEAAwAJABcCAAAlACIAAwAJABgCAAAkACEAAwAOABcCAAAkACIAAwAOABgCAAAkACQAAwAOABcCAAAkACUAAwAOABgCAAAlACQAAwAJABcCAAAlACUAAwAJABgCAAAoAB0AAwAEAJoAAAAoAB4AAwAEAJsAAAApAB0AAwAFAJoAAAApAB4AAwAFAJsAAAAhACMAAwALAFoBAAAiACMAAwAMAFoBAAAhACQAAwALAFoBAAAiACQAAwAMAFoBAAAhACUAAwALAFoBAAAiACUAAwAMAFoBAAAhACYAAwALAFsBAAAiACYAAwAMAFsBAAAfACMAAwANAFoBAAAgACMAAwAOAFoBAAAfACQAAwANAFoBAAAgACQAAwAOAFoBAAAfACUAAwANAFoBAAAgACUAAwAOAFoBAAAfACYAAwANAFsBAAAgACYAAwAOAFsBAAAXACIAAwAIAA0BAAAZACIAAwAFAAgBAAAaACIAAwAEAAgBAAAZACEAAwADAAYBAFAaACEAAwADAAYBAFAbACEAAwACAAcBAGAgABoAAwAEAPkAAAAgABsAAwAEAPoAAAAnAB4AAwADAJsAAAAnAB8AAwADAJwAAAAnACAAAwADAJ0AAAAoAB8AAwAEAJwAAAApAB8AAwAFAJwAAAAqAB0AAwAGAJoAAAAqAB4AAwAGAJsAAAAqAB8AAwAGAJwAAAAqACAAAwAGAJ0AAAAoACUAAwADAGUBAAAoACYAAwADAGYBAAApACUAAwAEAGUBAAApACYAAwAEAGYBAAAqACUAAwAFAGUBAAAqACYAAwAFAGYBAAAYACEAAwADAAYBAFAYACIAAwAFAAgBAAArABgAAwAOAGMCAAAoACMAAwADAFwCAAApACMAAwAEAFwCAAAcACIAAwALABoBAAAUABgAAwANAGICAAAVABgAAwAOAGICAAAWABgAAwAOAGICAAAXABgAAwAOAGICAAAYABgAAwAOAGMCAAApABYAAwANAN0BAAAVABYAAwAKANwBAAAVABcAAwAKAN0BAAAUABYAAwAJANwBAAAUABcAAwAJAN0BAAAiACgAAgABAAEAADAjACgAAgAIAAMAADAkACgAAgACAAEAADAaABoAAwACACYCAAAaABsAAwACACcCAAAbABoAAwADACYCAAAbABsAAwADACcCAAAWACUAAwAEAG8BAAAWACYAAwAEAHABAAAXACUAAwAFAG8BAAAXACYAAwAFAHABAAAYACUAAwAGAG8BAAAYACYAAwAGAHABAAAZACUAAwAHAG8BAAAZACYAAwAHAHABAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor2" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(-19, -24)
tile_map_data = PackedByteArray("AAAjACAAAwAHABsCAAAmACAAAwAGABsCAAAjACMAAwAHABsCAAAmACMAAwAGABsCAAAiACMAAwANAFUBAFAhACMAAwANAFYBAFAgACUAAwANAFYBAGAfACUAAwANAFUBAGAgACQAAwAOAFYBAGAfACQAAwAOAFUBAGAYACEAAwALAAcBAAApACUAAwACAGgBAGApACYAAwACAGgBAFA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor3" type="TileMapLayer" parent="."]
position = Vector2(-19, -24)
tile_map_data = PackedByteArray("AAAjACEAAwAHABsCAAAkACEAAwAIABsCAAAlACEAAwAFABsCAAAmACEAAwAGABsCAAAjACAAAwAHABoCAAAmACAAAwAGABoCAAAjACMAAwAHABoCAAAjACQAAwAHABsCAAAkACQAAwAIABsCAAAlACQAAwAFABsCAAAmACMAAwAGABoCAAAmACQAAwAGABsCAAApACUAAwAFAGgBAFA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor4" type="TileMapLayer" parent="."]
position = Vector2(0, 6)
tile_map_data = PackedByteArray("AAAjACIAAwAOACQCAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Zitzakken1" type="TileMapLayer" parent="."]
position = Vector2(2, 7)
tile_map_data = PackedByteArray("AAAoAB0AAwAIAIUBAAApAB0AAwAJAIUBAAAoABwAAwAIAIQBAAApABwAAwAJAIQBAAAmABwAAwAGAIYBAAAmAB0AAwAGAIcBAAAnABwAAwAHAIYBAAAnAB0AAwAHAIcBAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Zitzakken2" type="TileMapLayer" parent="."]
position = Vector2(3, 10)
tile_map_data = PackedByteArray("AAAnABsAAwAGAIQBAAAnABwAAwAGAIUBAAAoABsAAwAHAIQBAAAoABwAAwAHAIUBAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Zitzakken3" type="TileMapLayer" parent="."]
position = Vector2(5, 6)
tile_map_data = PackedByteArray("AAAnAB0AAwAGAIQBAAAnAB4AAwAGAIUBAAAoAB0AAwAHAIQBAAAoAB4AAwAHAIUBAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Kraan" type="TileMapLayer" parent="."]
z_index = 2
position = Vector2(0, 3)
tile_map_data = PackedByteArray("AAAYAB8AAwAIAAgBAAAZAB8AAwAJAAgBAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor5" type="TileMapLayer" parent="."]
z_index = 2
position = Vector2(-19, -24)
tile_map_data = PackedByteArray("AAAcACAAAwALABgBAAAcACEAAwALABkBAAAbACAAAwANAB4BAAAbACEAAwANAB8BAAAXACEAAwAIAAwBAAAZACAAAwAGAOIAAAAoACQAAwADAGQBAAApACQAAwAEAGQBAAAqACQAAwAFAGQBAAAjACIAAwAHABoCAAAjAB8AAwAHABoCAAAkACAAAwAIABsCAAAkACMAAwAIABsCAAAmACIAAwAGABoCAAAmAB8AAwAGABoCAAAlACAAAwAFABsCAAAlACMAAwAFABsCAAAfACIAAwANAFkBAAAgACIAAwAOAFkBAAAhACIAAwALAFkBAAAiACIAAwAMAFkBAAAoACEAAwADAFoCAAAoACIAAwADAFsCAAApACEAAwAEAFoCAAApACIAAwAEAFsCAAAWACQAAwAEAG4BAAAXACQAAwAFAG4BAAAYACQAAwAGAG4BAAAZACQAAwAHAG4BAAAXACUAAwACAG8BAAAYACUAAwADAG8BAAAZACEAAwAGAOMAAAA=")
tile_set = ExtResource("6_yjeik")

[node name="Postfloor6" type="TileMapLayer" parent="Postfloor5"]
z_index = 2
tile_map_data = PackedByteArray("AAAlACMAAwAJABkCAAAkACMAAwAJABkCABAkACAAAwAJABkCABAlACAAAwAJABkCAAAXACUAAwABAG8BAAA=")
tile_set = ExtResource("6_yjeik")

[node name="TAART" type="TileMapLayer" parent="Postfloor5/Postfloor6"]
z_index = 2
position = Vector2(3, -6)
tile_map_data = PackedByteArray("AAAkACAAAwANACICAAA=")
tile_set = ExtResource("6_yjeik")

[node name="player" parent="." instance=ExtResource("6_txc3n")]
z_index = 1
position = Vector2(504, 515)

[node name="InvUI" parent="player" index="0"]
visible = false

[node name="Camera2D" parent="player" index="3"]
zoom = Vector2(10, 10)
limit_left = 250
limit_top = 200
limit_right = 750
limit_bottom = 642

[node name="FunFacts" type="Node" parent="."]

[node name="taart" parent="FunFacts" node_paths=PackedStringArray("gui_target", "trigger_area") instance=ExtResource("3_3w3tr")]
position = Vector2(278, 93)
gui_target = NodePath("FactGui")
trigger_area = NodePath("FactTrigger")

[node name="FactGui" parent="FunFacts/taart" instance=ExtResource("4_1k2v8")]
fact = "Er iemand jarig is"

[node name="FactTrigger" type="CollisionShape2D" parent="FunFacts/taart"]
position = Vector2(285, 388)
rotation = -0.6614798
scale = Vector2(0.9999999, 0.9999999)
shape = SubResource("RectangleShape2D_txc3n")

[node name="koffie" parent="FunFacts" node_paths=PackedStringArray("gui_target", "trigger_area") instance=ExtResource("3_3w3tr")]
position = Vector2(278, 93)
gui_target = NodePath("FactGui")
trigger_area = NodePath("FactTrigger")

[node name="FactGui" parent="FunFacts/koffie" instance=ExtResource("4_1k2v8")]
fact = "De koffie hier vies is"

[node name="FactTrigger" type="CollisionShape2D" parent="FunFacts/koffie"]
position = Vector2(143, 442)
shape = SubResource("RectangleShape2D_txc3n")

[node name="doorToLab" type="Area2D" parent="."]
position = Vector2(522, 252)

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorToLab"]
position = Vector2(59, 164)
shape = SubResource("RectangleShape2D_1k2v8")

[node name="CompassTarget" type="Marker2D" parent="."]
position = Vector2(669, 320)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("6_nlnob")]
visible = false
position = Vector2(204, 525)

[node name="doorToOutdoors" type="Area2D" parent="."]
position = Vector2(490, 463)

[node name="CollisionShape2D" type="CollisionShape2D" parent="doorToOutdoors"]
position = Vector2(59, 166)
shape = SubResource("RectangleShape2D_1k2v8")

[node name="ButtonHintOutside" type="NinePatchRect" parent="."]
offset_left = 515.0
offset_top = 599.0
offset_right = 582.0
offset_bottom = 617.0

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonHintOutside"]
layout_mode = 0
offset_left = 15.0
offset_top = 6.0
offset_right = 67.0
offset_bottom = 14.0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/text_highlight_h_padding = 0
theme_override_constants/text_highlight_v_padding = 0
theme_override_constants/underline_alpha = 0
theme_override_constants/strikethrough_alpha = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/table_v_separation = 0
theme_override_fonts/normal_font = ExtResource("7_yjeik")
theme_override_font_sizes/normal_font_size = 7
text = "TO INTERECT"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="ButtonHintOutside"]
layout_mode = 0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 17.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="ButtonHintOutside/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 13.0
theme_override_fonts/normal_font = ExtResource("7_yjeik")
theme_override_font_sizes/normal_font_size = 7
text = "E"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonHintLab" type="NinePatchRect" parent="."]
offset_left = 547.0
offset_top = 426.0
offset_right = 614.0
offset_bottom = 444.0

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonHintLab"]
layout_mode = 0
offset_left = 15.0
offset_top = 6.0
offset_right = 67.0
offset_bottom = 14.0
theme_override_constants/shadow_outline_size = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/text_highlight_h_padding = 0
theme_override_constants/text_highlight_v_padding = 0
theme_override_constants/underline_alpha = 0
theme_override_constants/strikethrough_alpha = 0
theme_override_constants/table_h_separation = 0
theme_override_constants/table_v_separation = 0
theme_override_fonts/normal_font = ExtResource("7_yjeik")
theme_override_font_sizes/normal_font_size = 7
text = "TO INTERECT"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="ButtonHintLab"]
layout_mode = 0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 17.0
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="ButtonHintLab/Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 12.0
offset_bottom = 13.0
theme_override_fonts/normal_font = ExtResource("7_yjeik")
theme_override_font_sizes/normal_font_size = 7
text = "E"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="doorToLab" to="." method="_on_door_body_entered_tilab"]
[connection signal="body_exited" from="doorToLab" to="." method="_on_door_body_exited"]
[connection signal="body_entered" from="doorToOutdoors" to="." method="_on_door_body_entered_outside"]
[connection signal="body_exited" from="doorToOutdoors" to="." method="_on_door_body_exited"]

[editable path="player"]
